@@ -3,6 +3,7 @@
 <!-- $Id$ -->
 <aspectj>
     <aspects>
+        <aspect name="org.dellroad.stuff.spring.RetryTransactionAspect"/>
         <aspect name="org.dellroad.stuff.spring.ThreadConfigurableAspect"/>
         <aspect name="org.dellroad.stuff.spring.ThreadTransactionalAspect"/>
         <aspect name="org.dellroad.stuff.vaadin.VaadinConfigurableAspect"/>
